fixed impressum top gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -107,9 +107,10 @@ header {
   font-weight: 300;
   background-color: #b4b8a6;
   padding: 0;
+  top: 0;
   padding-right: 5px;
   padding-bottom: 20px;
-  padding-left: 5px;
+  padding-left: 10px;
   margin: 0 auto;
   border-bottom: 2px solid #4a4a4a;
   position: fixed;
